@@ -2,7 +2,7 @@ Date: Fri, 8 Feb 2008 18:03:56 +0000
 From: Mr Exception <special@peterbe.com>
 To: mail@example.com
 Sender: special@peterbe.com
-Subject: Test B
+Subject: Test B 
 
 
 This is the BODY which is different.
