@@ -1,4 +1,6 @@
 -
+    Bug fixed: Email in body parsed correctly into Unicode.
+    
     New feature: Clairvoyant Javascript optimized with JSON.
     
     New feature: Menu icons in a CSS Sprite for much faster loading.
